@@ -6,6 +6,7 @@ ZEsarUX 11.1 - xxxx edition. 06 Junio 2024
 Permitir hotswap a Pentagon
 Mejorar aviso de Azimuth en ventana External Audio Source
 Permitir no guardar snapshot al salir de ZEsarUX
+Permitir definir Alt Izq, Ctrl Izq o Shift Izq como acción de Fuego de Joystick
 
 * Correcciones:
 
