@@ -4522,7 +4522,7 @@ void menu_hardware_tbblue_core_version(MENU_ITEM_PARAMETERS)
 void menu_hardware_joystick_fire_key(MENU_ITEM_PARAMETERS)
 {
     joystick_defined_key_fire++;
-    if (joystick_defined_key_fire==4) joystick_defined_key_fire=0;
+    if (joystick_defined_key_fire==7) joystick_defined_key_fire=0;
 }
 
 
